Fix: Document Popup - Align radio button

--- a/userChrome.css
+++ b/userChrome.css
@@ -668,7 +668,7 @@
 
     /*- Radio Button ---------------------------------------------------------*/
     xul|radio {
-      margin-inline-start: 0 !important;
+      /* margin-inline-start: 0 !important; */
       appearance: none !important;
     }
 
